# bagel

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
examples/: CMakeLists.txt  timer.cpp
include/bagel/: dynamic_library.hpp  export.hpp
include/bagel/chrono/: timer.hpp
src/: dynamic_library.cpp
src/chrono/: timer.cpp
tests/: CMakeLists.txt  dynamic_lib_example.cpp  test_dynamic_library.cpp
tests/chrono/: test_timer.cpp
